Small changes to meet assignment requirements

--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,6 +1,12 @@
-<title>Odev1</title>
-  <h1>Test</h1>
-  Result is {{result}}
+]<title>Odev1</title>
+  <h1>SubArray Checker</h1>
+  <p>Checks if arrays in box1 and box2 have same integers between indices in box3 and box4.
+  <br>Usage:
+  <br>-Elements in box1 and box2 should be separated by newline chacaters. (1 integer per line).
+  <br>-Box3 and box4 should include only 1 element.
+  <br>-Returns true if subarrays are equal, false otherwise.
+  <br>
+  <br>result is -> {{result}}
 
   <form action="compute" method="post">
 	<textarea name="input1" rows="10" cols="30"></textarea>
@@ -10,4 +16,3 @@
 	<br>
 	<input type="submit">
   </form>
-
