removed ']' character from first line

--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,4 +1,4 @@
-]<title>Odev1</title>
+<title>Odev1</title>
   <h1>SubArray Checker</h1>
   <p>Checks if arrays in box1 and box2 have same integers between indices in box3 and box4.
   <br>Usage:
